# agency_old

./: .dockerignore  .gitignore  README.md  docker-compose-prod.yml  docker-compose.yml
flask-app/: .env  Dockerfile  pyproject.toml  requirements.txt
flask-app/flaskr/: __init__.py  config.py  decorators.py  models.py  resources.py  utils.py  views.py
flask-app/flaskr/static/: style.css  style.scss
flask-app/flaskr/templates/: admin.html  base.html  home.html  object-edit.html  object.html
