[tool.poetry]
name = "agency"
version = "0.1.0"
description = ""
authors = ["Muskelo <titanioman@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
Flask-Assets = "^2.0"
pyScss = "^1.4.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
mysql-connector-python = "^8.0.28"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pylint = "^2.12.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
